Sat Jan 13 23:24:59 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_free, ole_type_free, 
	  olemethod_free, olevariable_free, oleparam_free, 
	  ole_event_free): fix memory leak.  [ruby-core:09846]

Wed Jan 10 00:10:23 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_replace): use ptr and len of orig instead of
	  shared.  fixed: [ruby-dev:30116]

Tue Jan  9 12:29:20 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_getpwuid, etc_getgrgid): fix to correctly
	  convert uid/gid from VALUE.

	* ext/etc/etc.c (etc_getpwuid): ditto.

Tue Jan  9 03:54:38 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_upto): String#upto from empty string makes
	  inifinite loop.  [ruby-core:09864]

	* string.c (rb_str_upto): use RSTRING_LEN().

Sun Jan  7 18:36:05 2007  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_thread_stop_timer_thread(), rb_thread_reset_timer_thread(),
	  rb_thread_start_timer_thread()): added.

	* thread_pthread.ci: add a native_thread_join() and move
	  rb_thread_reset_timer_thread() definition to thread.c.

	* thread_win32.ci: ditto

	* process.c: fix before_exec(), after_exec() to stop timer thread
	  (and restart timer thread if exec failed).  and fix to reset
	  timer thread information when forked child process starts
	  (to fix [ruby-core:09822]).

Sun Jan  7 18:28:17 2007  Koichi Sasada  <ko1@atdot.net>

	* common.mk: add a "compare" rule and fix MATZRUBY variable

Sun Jan  7 17:47:16 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole.rb: add test for WIN32OLE#[],
	  WIN32OLE#[]=.

	* ext/win32ole/win32ole.c: update comment for rdoc of
	  WIN32OLE#[] and WIN32OLE#[]=.

Sun Jan  7 12:13:26 2007  Eric Hodel  <drbrain@segment7.net> 

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser#find_class_comment):
	  Look for class and module comments above rb_define_class and
	  rb_define_module.  Patch by Daniel Berger <djberg96 at gmail.com>
